increase size of card action icons

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                                         <!-- start card actions -->
                                         <div class="pmd-card-actions">
                                             <span>
-                                                <button onclick="animateGauges()" type="button" class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary"><i class="material-icons pmd-sm">play_arrow</i></button>
-                                                <button onclick="stopGaugesAnimation()" type="button" class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary"><i class="material-icons pmd-sm">stop</i></button>
-                                                <button type="button" class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary"><i class="material-icons pmd-sm">fullscreen</i></button>
+                                                <button onclick="animateGauges()" type="button" class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary"><i class="material-icons pmd-lg">play_arrow</i></button>
+                                                <button onclick="stopGaugesAnimation()" type="button" class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary"><i class="material-icons pmd-lg">stop</i></button>
+                                                <button type="button" class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary"><i class="material-icons pmd-lg">fullscreen</i></button>
                                             </span>
                                         </div>
                                         <!-- end card actions -->
