--- a/html/about.html
+++ b/html/about.html
@@ -80,7 +80,7 @@
             <ul>
                 <li><a href="/index.html">Data Center Dashboard</a></li>
                 <li><a href="http://www.murdoch.edu.au/">Main Murdoch Website</a></li>
-                <li><a href="/html/admin-login.html">Admin Login</a></li>
+                <li><a href="/html/admin-login/">Admin Login</a></li>
             </ul>
         </footer>
         <!-- end footer -->   
