--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             <ul>
                 <li><a href="html/about.html">About This Page</a></li>
                 <li><a href="http://www.murdoch.edu.au/">Main Murdoch Website</a></li>
-                <li><a href="html/admin-login.html">Admin Login</a></li>
+                <li><a href="html/admin-login/">Admin Login</a></li>
             </ul>
         </footer>
     <!-- end footer -->
