improvements to admin/layout tab

--- a/html-admin/admin-dashboard.html
+++ b/html-admin/admin-dashboard.html
@@ -61,7 +61,13 @@
                                 </div>
                                 <div id="network-collapse" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="network-heading">
                                     <div class="panel-body">
-                                        Network Accordian content
+                                        <!-- Simple checkbox with label -->
+                                        <div class="checkbox pmd-default-theme">
+                                            <label class="pmd-checkbox pmd-checkbox-ripple-effect">
+                                                <input type="checkbox" value="">
+                                                <span> Item </span>
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
