--- a/html/about.html
+++ b/html/about.html
@@ -78,7 +78,7 @@
         <!-- start footer -->
         <footer class="mdc-footer">
             <ul>
-                <li><a href="/index.html">Data Center Dashboard</a></li>
+                <li><a href="/">Data Center Dashboard</a></li>
                 <li><a href="http://www.murdoch.edu.au/">Main Murdoch Website</a></li>
                 <li><a href="/html/admin-login/">Admin Login</a></li>
             </ul>
